--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
+    "react-lottie": "^1.2.3",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
