--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Jason Zheng <jasonzhengyj@gmail.com>",
   "dependencies": {
+    "@material-ui/core": "^4.9.8",
     "babel-plugin-styled-components": "^1.10.7",
     "dayjs": "^1.8.23",
     "gatsby": "^2.20.8",
