--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
     "react-lottie": "^1.2.3",
+    "recharts": "^1.8.5",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
