--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dayjs": "^1.8.23",
     "gatsby": "^2.20.10",
     "gatsby-image": "^2.3.1",
+    "gatsby-plugin-google-analytics": "^2.2.2",
     "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-offline": "^3.1.2",
     "gatsby-plugin-react-helmet": "^3.2.1",
