--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@material-ui/core": "^4.9.8",
     "babel-plugin-styled-components": "^1.10.7",
     "dayjs": "^1.8.23",
-    "gatsby": "^2.20.10",
+    "gatsby": "^2.20.12",
     "gatsby-image": "^2.3.1",
     "gatsby-plugin-google-analytics": "^2.2.2",
     "gatsby-plugin-manifest": "^2.3.3",
@@ -25,6 +25,7 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
     "react-lottie": "^1.2.3",
+    "react-map-gl": "^5.2.3",
     "recharts": "^1.8.5",
     "styled-components": "^5.0.1"
   },
