:pencil: Update gitignore
Ignores:
- .env files
- .geojson files

--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,8 @@ typings/
 *.tgz
 
 # dotenv environment variable files
-.env*
+.env.production
+.env.development
 
 # gatsby files
 .cache/
@@ -67,3 +68,6 @@ yarn-error.log
 .pnp.js
 # Yarn Integrity file
 .yarn-integrity
+
+# geojson files
+*.geojson
