--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
-    "prettier": "^2.0.4"
+    "prettier": "2.0.2"
   },
   "keywords": [
     "gatsby"
